k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aplicacion
  labels:
    app: aplicacion
spec:
  type: ClusterIP
  selector:
    app: aplicacion
  ports:
    - name: http
      port: 80
      targetPort: http
