k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aplicacion-ingress
  labels:
    app: aplicacion
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  defaultBackend:
    service:
      name: aplicacion-service
      port:
        number: 80
